@@ -2,7 +2,7 @@
 ## Title: |cff1784d1ElvUI|r Enhanced (WOD)
 ## Author: instant
 ## X-Credits: Tristimdorio (Omega1970), Azilroka, Lockslap, Sortokk, Repooc, moresunders
-## Version: 3.0.5
+## Version: 3.0.6
 ## Notes: Plugin-Enhancements for |cff1784d1ElvUI|r.
 ## X-Category: Plugins
 ## URL: http://wow.curseforge.com/addons/elvui-enhanced-mod-wod/
